--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@aws-sdk/client-dynamodb": "^3.418.0",
     "@aws-sdk/lib-dynamodb": "^3.428.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-unless": "^2.1.3",
     "express-validator": "^7.0.1",
     "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
